# vuoop3

./: .gitignore  CMakeLists.txt  README.md  generatedList.txt  main.cpp  unit_testing.cpp  unit_testing.h
0.1/: main_c.cpp
0.2/: main.cpp
0.3/: cmd run.txt
0.3/headers/: functions.cpp  main.h
0.4/: kietekai.txt  kursiokai.txt  main.cpp  vargsiukai.txt
0.4/headers/: functions.cpp
0.5/: CMakeLists.txt
0.5/headers/: timer.h
0.5_deque/: main.cpp
0.5_deque/headers/: main.h  studs.h
0.5_list/: generatedList.txt
0.5_list/headers/: functions.cpp  main.h  student.h  studs.h
docs/html/: _human_8h_source.html  annotated.html  annotated_dup.js  class_human-members.html  class_human.html  class_human.js  class_student-members.html  class_student.html  class_student.js  class_studs-members.html  class_studs.html  class_studs.js  classes.html  dir_2a397ad556d436f047aece3feca54350.html  dir_2a397ad556d436f047aece3feca54350.js  dir_2c75daa2b0e806a7cbaed0cb120e0324.html  dir_2c75daa2b0e806a7cbaed0cb120e0324.js  dir_481289237161104c3122d91ef9bb848c.html  dir_5879059e5971f2bee790d692a4c647d4.html  dir_5879059e5971f2bee790d692a4c647d4.js  dir_6c63b425752a66b836f4320fe4665cba.html  dir_6c63b425752a66b836f4320fe4665cba.js  dir_9290d3b0a05b5808e63d919e5a7c6f83.html  dir_a430e25d94d46c9a88deae7024801700.html  dir_b441dded1dac47ec50830e3b4307eeb5.html  dir_b441dded1dac47ec50830e3b4307eeb5.js  dir_d2d21f830e599454b18cc030d9d733df.html  dir_d522931ffa1371640980b621734a4381.html  (+20 more)
headers/: Human.h  functions.cpp  main.h  student.h  studs.h
unit_testing/: unit_testing.cpp
(+14 files in other folders)
